2020-05-25 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu_shell.c: Add Doxygen group geda-menu-shell-wcvo.
      Convert plain source documentation to Doxygen documentation. Utilize
      macro:

          * geda_get_widget_allocation
          * geda_set_widget_window

2020-05-21 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu_item.c: Defer calling get_offsets and reduce the
      scope of offset integers in geda_menu_item_position_menu. Revise
      geda_menu_item_popup_timeout to use ancillary Booleans parent_is_menu
      and parent_is_menushell and replace dynamic cast with static cast.

2020-05-20 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu_shell.c: Revise geda_menu_shell_button_press to
      not redundantly reassign parent in the third conditional.

2020-05-19 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu_shell.c: Replace GTK_TOP_BOTTOM with
      MENU_TOP_BOTTOM. Utilize macro:

          * geda_get_widget_parent

2020-05-18 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu_item.c: Reduce scope of parent_menu_item in
      function geda_menu_item_position_menu.

2020-05-12 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu_item.c: Remove unnecessary cast to GedaMenuShell
      in geda_menu_item_buildable_custom_finished. Revise geda_menu_item_update
      to reference priv->submenu directly instead of calling geda_menu_item_get_
      submenu_widget.

2020-05-12 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu_item.c: Reduce scope of parent in function
      geda_menu_item_real_get_height. Add ancillary GdkWindow pointer in
      function geda_menu_item_position_menu. Replace gtk_widget_get_parent
      with geda_get_widget_parent. Utilize macro:

          * geda_get_widget_requisition
          * geda_get_widget_style

2020-05-11 Wiley E. Hill <wileyhill@gmail.com>
