@@ -1,3 +1,9 @@
+2020-05-26 Wiley E. Hill <wileyhill@gmail.com>
+
+    * src/widgets/geda_menu_item.c: Replace gdk_screen_get_monitor_at_window
+      with gdk_display_get_monitor_at_window and gdk_screen_get_monitor_workarea
+      with gdk_monitor_get_workarea in gtk3::geda_menu_item_position_menu.
+
 2020-05-25 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/widgets/geda_menu_shell.c: Add Doxygen group geda-menu-shell-wcvo.
